--- a/public/css/base/everylayout.css
+++ b/public/css/base/everylayout.css
@@ -20,7 +20,9 @@
   align-items: center;
 
   /* data-split - isso é um modifier do cluster, que empurra os elementos para o lado oposto do parent */
-  [split-left] { margin-left: auto; }
+  [split-left],
+  [split] { margin-left: auto; }
+  
   [split-right] { margin-right: auto; }
 }
 
