--- a/public/css/utils/utils.css
+++ b/public/css/utils/utils.css
@@ -48,9 +48,10 @@
   background-color: rgba(255, 0, 0, 0.1);
 }
 
-.aux-card {
-  outline: 2px solid blue;
-  background-color: rgba(0, 0, 255, 0.1);
+.card-aux {
+  outline: 2px solid black;
+  background-color: white;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5);
   padding: 1rem;
   border-radius: 0.5rem;
   aspect-ratio: 16 / 9;
@@ -60,9 +61,4 @@
   @media (max-width: 768px) {
     display: none !important;
   }
-}
-
-.subgrid {
-  grid-template-columns: subgrid;
-  grid-column: inherit;
 }
