--- a/public/css/utils/utils.css
+++ b/public/css/utils/utils.css
@@ -57,6 +57,14 @@
   aspect-ratio: 16 / 9;
 }
 
+.panel-aux {
+  outline: 2px solid black;
+  background-color: white;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5);
+  padding: 1rem;
+  border-radius: 0.5rem;
+}
+
 .hide-on-mobile {
   @media (max-width: 768px) {
     display: none !important;
