Index page complete

--- a/public/css/base/typography.css
+++ b/public/css/base/typography.css
@@ -10,7 +10,7 @@
 
   body {
     background-color: var(--white-color);
-    color: var(--black-color);
+    color: var(--base-color);
   }
 
   h1,
@@ -32,17 +32,17 @@
   h1,
   .h1 {
     font-size: var(--size-4);
-    font-weight: 600;
+    font-weight: 700;
   }
   h2,
   .h2 {
-    font-size: var(--size-1);
-    font-weight: 500;
+    font-size: var(--size-2);
+    font-weight: 600;
   }
   h3,
   .h3 {
     font-size: var(--size-1);
-    font-weight: 500;
+    font-weight: 600;
   }
   h4,
   .h4 {
