--- a/public/css/utils/utils.css
+++ b/public/css/utils/utils.css
@@ -49,13 +49,25 @@
 }
 
 .card-aux {
-  outline: 2px solid black;
+  outline: 1px solid var(--black-color-10-tint);
   background-color: white;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5);
   padding: 1rem;
-  border-radius: 0.5rem;
+  border-radius: 1rem;
   aspect-ratio: 16 / 9;
 }
+
+  .card-aux__image {
+    border-radius: 0.5rem;
+    width: 100%;
+    aspect-ratio: 16 / 9;
+    object-fit: cover;
+  }
+
+  .card-aux__brow {
+    font-weight: 600;
+    line-height: 1.2em;
+  }
+
 
 .panel-aux {
   outline: 2px solid black;
@@ -69,4 +81,54 @@
   @media (max-width: 768px) {
     display: none !important;
   }
+}
+
+.base-link {
+  color: var(--base-color);
+  text-decoration: none;
+}
+
+.hero__content {
+  display: grid;
+  grid-template-columns: subgrid;
+  margin-bottom: var(--space-2xl-3xl);
+}
+
+.hero__content>*:first-child {
+  grid-column: content-start / col6;
+}
+
+.hero__content .panel {
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  justify-content: center;
+  max-width: 39.5rem;
+}
+
+.hero__content .panel span {
+  font-weight: 300;
+  font-size: var(--size-0);
+}
+
+.hero__content .panel h1 {
+  margin-bottom: var(--space-xs-s);
+}
+
+.hero__content .panel a {
+  margin: var(--space-l-xl) 0;
+  font-weight: 400;
+}
+
+.hero__content>*:last-child {
+  grid-column: col7 / content-end;
+}
+
+.hero__content img {
+  aspect-ratio: 1/1;
+}
+
+.hero__brow {
+  font-weight: 700;
+  color: var(--primary-color);
 }
