--- a/public/css/utils/color-utils-color.css
+++ b/public/css/utils/color-utils-color.css
@@ -330,3 +330,20 @@
 .color\:info-10-shade { color: var(--info-color-10-shade) !important; }
 .color\:info-5-shade { color: var(--info-color-05-shade) !important; }
 .color\:info-2-shade { color: var(--info-color-02-shade) !important; }
+
+.color\:white-color { color: var(--white-color) !important; }
+.color\:white-98-shade { color: var(--white-color-98-shade) !important; }
+.color\:white-90-shade { color: var(--white-color-90-shade) !important; }
+.color\:white-80-shade { color: var(--white-color-80-shade) !important; }
+.color\:white-color-dark,
+.color\:white-73-shade { color: var(--white-color-73-shade) !important; }
+.color\:white-70-shade { color: var(--white-color-70-shade) !important; }
+.color\:white-60-shade { color: var(--white-color-60-shade) !important; }
+.color\:white-50-shade { color: var(--white-color-50-shade) !important; }
+.color\:white-40-shade { color: var(--white-color-40-shade) !important; }
+.color\:white-30-shade { color: var(--white-color-30-shade) !important; }
+.color\:white-20-shade { color: var(--white-color-20-shade) !important; }
+.color\:white-11-shade { color: var(--white-color-11-shade) !important; }
+.color\:white-10-shade { color: var(--white-color-10-shade) !important; }
+.color\:white-5-shade { color: var(--white-color-05-shade) !important; }
+.color\:white-2-shade { color: var(--white-color-02-shade) !important; }
