--- a/public/css/base/everylayout.css
+++ b/public/css/base/everylayout.css
@@ -35,7 +35,7 @@
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(var(--_grid-min-width, 240px), 1fr));
   gap: var(--_grid-gap, var(--base-gutter));
 }
 
