--- a/public/css/utils/utils.css
+++ b/public/css/utils/utils.css
@@ -40,6 +40,8 @@
 .text-transform\:capitalize { text-transform: capitalize; }
 .text-transform\:none { text-transform: none; }
 
+.font-style\:italic { font-style: italic; }
+
 .float\:left { float: left; }
 .float\:right { float: right; }
 
