--- a/public/css/base/everylayout.css
+++ b/public/css/base/everylayout.css
@@ -96,5 +96,24 @@
 }
 
 
+.with-sidebar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: var(--space-m);
+}
 
+.with-sidebar[reversed] {
+  flex-direction: row-reverse;
+}
+
+.with-sidebar > :first-child {
+  flex-grow: 1;
+}
+
+.with-sidebar > :last-child {
+  flex-basis: 0;
+  flex-grow: 999;
+  min-inline-size: 50%;
+}
+  
   
